fix text on safari

--- a/css/style.css
+++ b/css/style.css
@@ -511,12 +511,12 @@ footer p {
 }
 
 .lehman_logo_image {
-  width: 90%;
+  /* width: 90%; */
   height: 45px;
 }
 
 .blackstone_logo_image {
-  width: 90%;
+  /* width: 90%; */
   height: 45px;
 }
 
@@ -583,12 +583,12 @@ footer p {
     display: block;
   }
   .lehman_logo_image {
-    width: 100%;
+    /* width: 100%; */
     height: 30px;
   }
 
   .blackstone_logo_image {
-    width: 100%;
+    /* width: 100%; */
     height: 30px;
   }
   img.for-college-students,
